# Butcoin

./: CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: build.yml  cpp.yml  flutter.yml  go.yml  release.yml  rust.yml
but-ai/: CMakeLists.txt
but-ai/src/: ais_engine.hpp  ais_main.cpp
but-airgap/: CMakeLists.txt
but-airgap/src/: air_engine.hpp  air_main.cpp
but-consensus/: CMakeLists.txt
but-consensus/src/: main.cpp  poc.hpp  sp42.hpp  validator.hpp
but-core/: CMakeLists.txt  Cargo.toml
but-core/src/: block.hpp  chain.rs  main.cpp  main.rs  merkle.hpp  p2p.rs
but-crypto/: Cargo.toml  README.md
but-crypto/src/: cks1024.rs  cks512.rs  ffi.rs  hybrid.rs  lib.rs
but-did/: CMakeLists.txt
but-did/src/: did_engine.hpp  did_main.cpp
but-p2p/: go.mod  main.go  noise.go  shield.go
but-quantum/: Cargo.toml
but-quantum/src/: main.rs  qsh_engine.rs
but-random/: Cargo.toml
but-random/src/: main.rs  qrn_engine.rs
but-tee/: CMakeLists.txt
but-tee/src/: tex_engine.hpp  tex_main.cpp
but-time/: CMakeLists.txt
but-time/src/: tlk_engine.hpp  tlk_main.cpp
but-vault/: CMakeLists.txt
but-vault/src/: vlt_engine.hpp  vlt_main.cpp
but-wallet/: pubspec.yaml
but-wallet/lib/: main.dart
but-wallet/lib/screens/: address_mapper.dart  auth_gate.dart  bridge_screen.dart  diagnostics_panel.dart  hardware_screen.dart  language_screen.dart  nft_screen.dart  receive_screen.dart  send_screen.dart  staking_screen.dart  swap_screen.dart  system_restore.dart  token_create.dart  token_list.dart  wallet_home.dart
but-wallet/lib/utils/: balance_service.dart  biometric_service.dart  bip_paths.dart  bridge_engine.dart  dual_key_vault.dart  guardian_notifier.dart  hardware_engine.dart  key_engine.dart  localization.dart  name_resolver.dart  nft_engine.dart  recovery_engine.dart  rust_bridge.dart  staking_engine.dart  swap_engine.dart  token_manager.dart  token_storage.dart  vault_guard.dart
but-zkp/: CMakeLists.txt
but-zkp/src/: zkf_engine.hpp  zkf_main.cpp
