[package]
name = "but-core"
version = "0.1.0"
edition = "2021"
description = "BUT Network Core Engine - Distributed Node Service"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
log = "0.4"
env_logger = "0.10"

[profile.release]
opt-level = "z"
lto = true
strip = true
