[package]
name = "but-crypto"
version = "0.1.0"
edition = "2021"
description = "BUT Network CKS Quantum-Resistant Cryptography Library"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
