[package]
name = "but-crypto"
version = "0.2.0"
edition = "2021"
description = "BUT Network CKS Quantum-Resistant Cryptography Library"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "but_crypto"

[dependencies]
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
