[package]
name = "but-quantum"
version = "0.1.0"
edition = "2021"
description = "BUT Network QSH - Post-Quantum Signatures (Dilithium/Kyber Ready)"

[dependencies]
rand = "0.8"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
